@@ -4,29 +4,36 @@
  as well as the IActiveScriptError interface code.
 """
 
+from __future__ import annotations
+
 import re
 import traceback
+import warnings
+from types import TracebackType
 
 import pythoncom
 import win32com.server.util
 import winerror
 from win32com.axscript import axscript
 from win32com.server.exception import COMException
+from win32comext.axscript.client.debug import DebugManager
+from win32comext.axscript.client.framework import AXScriptCodeBlock, COMScript
+from win32comext.axscript.server.axsite import AXSite
 
 debugging = 0
 
 
-def FormatForAX(text):
+def FormatForAX(text: str):
     """Format a string suitable for an AX Host"""
     # Replace all " with ', so it works OK in HTML (ie, ASP)
     return ExpandTabs(AddCR(text))
 
 
-def ExpandTabs(text):
+def ExpandTabs(text: str):
     return re.sub(r"\t", "    ", text)
 
 
-def AddCR(text):
+def AddCR(text: str):
     return re.sub(r"\n", "\r\n", text)
 
 
@@ -45,7 +52,7 @@ class IActiveScriptError:
         print("IActiveScriptError QI - unknown IID", iid)
         return 0
 
-    def _SetExceptionInfo(self, exc):
+    def _SetExceptionInfo(self, exc: AXScriptException):
         self.exception = exc
 
     def GetSourceLineText(self):
@@ -72,13 +79,26 @@ class AXScriptException(COMException):
     object.
     """
 
-    def __init__(self, site, codeBlock, exc_type, exc_value, exc_traceback):
+    def __init__(
+        self,
+        site: COMScript,
+        codeBlock: AXScriptCodeBlock | None,
+        exc_type: None = None,
+        exc_value: BaseException | None = None,
+        exc_traceback: None = None,
+    ):
         # set properties base class shares via base ctor...
         super().__init__(
             description="Unknown Exception",
             scode=winerror.DISP_E_EXCEPTION,
             source="Python ActiveX Scripting Engine",
         )
+
+        if exc_type is not None or exc_traceback is not None:
+            warnings.warn(
+                "`exc_type` and `exc_traceback` were redundant and are now unused.",
+                category=DeprecationWarning,
+            )
 
         # And my other values...
         if codeBlock is None:
@@ -89,18 +109,18 @@ class AXScriptException(COMException):
             self.startLineNo = codeBlock.startLineNumber
         self.linetext = ""
 
-        self.__BuildFromException(site, exc_type, exc_value, exc_traceback)
+        self.__BuildFromException(site, exc_value)
 
-    def __BuildFromException(self, site, type, value, tb):
+    def __BuildFromException(self, site: COMScript, value: BaseException | None):
         if debugging:
             import linecache
 
             linecache.clearcache()
         try:
-            if issubclass(type, SyntaxError):
+            if isinstance(value, SyntaxError):
                 self._BuildFromSyntaxError(value)
             else:
-                self._BuildFromOther(site, type, value, tb)
+                self._BuildFromOther(site, value)
         except:  # Error extracting traceback info!!!
             traceback.print_exc()
             # re-raise.
@@ -111,13 +131,16 @@ class AXScriptException(COMException):
         msg = exc.msg or "Unknown Error"
         offset = exc.offset or 0
         line = exc.text or ""
+        lineno = exc.lineno or 0
 
         self.description = FormatForAX(msg)
-        self.lineno = exc.lineno
+        self.lineno = lineno
         self.colno = offset - 1
         self.linetext = ExpandTabs(line.rstrip())
 
-    def _BuildFromOther(self, site, exc_type, value, tb):
+    def _BuildFromOther(self, site: COMScript, value: BaseException | None):
+        tb = value.__traceback__ if value else None
+        exc_type = type(value) if value else None
         self.colno = -1
         self.lineno = 0
         if debugging:  # Full traceback if debugging.
@@ -132,7 +155,6 @@ class AXScriptException(COMException):
             "r_reload",
             "r_open",
         ]  # hide from these functions down in the traceback.
-        depth = None
         tb_top = tb
         while tb_top:
             filename, lineno, name, line = self.ExtractTracebackInfo(tb_top, site)
@@ -141,8 +163,7 @@ class AXScriptException(COMException):
             tb_top = tb_top.tb_next
         format_items = []
         if tb_top:  # found one.
-            depth = 0
-            tb_look = tb_top
+            tb_look: TracebackType | None = tb_top
             # Look down for our bottom
             while tb_look:
                 filename, lineno, name, line = self.ExtractTracebackInfo(tb_look, site)
@@ -155,15 +176,14 @@ class AXScriptException(COMException):
                     self.lineno = lineno
                     self.linetext = line
                 format_items.append((filename, lineno, name, line))
-                depth = depth + 1
                 tb_look = tb_look.tb_next
         else:
-            depth = None
             tb_top = tb
 
         bits = ["Traceback (most recent call last):\n"]
-        bits.extend(traceback.format_list(format_items))
-        if exc_type == pythoncom.com_error:
+        # Fixed in https://github.com/python/typeshed/pull/11675 , to be included in next mypy release
+        bits.extend(traceback.format_list(format_items))  # type: ignore[arg-type]
+        if isinstance(value, pythoncom.com_error):
             desc = f"{value.strerror} (0x{value.hresult:x})"
             if (
                 value.hresult == winerror.DISP_E_EXCEPTION
@@ -176,23 +196,17 @@ class AXScriptException(COMException):
             bits.extend(traceback.format_exception_only(exc_type, value))
 
         self.description = ExpandTabs("".join(bits))
-        # Clear tracebacks etc.
-        tb = tb_top = tb_look = None
 
-    def ExtractTracebackInfo(self, tb, site):
+    def ExtractTracebackInfo(self, tb: TracebackType, site: COMScript):
         import linecache
 
-        f = tb.tb_frame
         lineno = tb.tb_lineno
-        co = f.f_code
+        co = tb.tb_frame.f_code
         filename = co.co_filename
         name = co.co_name
-        line = linecache.getline(filename, lineno)
+        line: str | None = linecache.getline(filename, lineno)
         if not line:
-            try:
-                codeBlock = site.scriptCodeBlocks[filename]
-            except KeyError:
-                codeBlock = None
+            codeBlock = site.scriptCodeBlocks.get(filename)
             if codeBlock:
                 # Note: 'line' will now be unicode.
                 line = codeBlock.GetLineNo(lineno)
@@ -206,7 +220,11 @@ class AXScriptException(COMException):
         return "AXScriptException Object with description:" + self.description
 
 
-def ProcessAXScriptException(scriptingSite, debugManager, exceptionInstance):
+def ProcessAXScriptException(
+    scriptingSite: AXSite,
+    debugManager: DebugManager,
+    exceptionInstance: AXScriptException,
+):
     """General function to handle any exception in AX code
 
     This function creates an instance of our IActiveScriptError interface, and
@@ -214,7 +232,7 @@ def ProcessAXScriptException(scriptingSite, debugManager, exceptionInstance):
     likely call back on the IActiveScriptError interface to get the source text
     and other information not normally in COM exceptions.
     """
-    # 	traceback.print_exc()
+    # traceback.print_exc()
     instance = IActiveScriptError()
     instance._SetExceptionInfo(exceptionInstance)
     gateway = win32com.server.util.wrap(instance, axscript.IID_IActiveScriptError)
