@@ -11,6 +11,7 @@ from __future__ import annotations
 
 import re
 import sys
+from typing import NoReturn
 
 import pythoncom  # Need simple connection point support
 import win32api
@@ -112,7 +113,7 @@ def trace(*args):
     print()
 
 
-def RaiseAssert(scode, desc):
+def RaiseAssert(scode, desc) -> NoReturn:
     """A debugging function that raises an exception considered an "Assertion"."""
     print("**************** ASSERTION FAILED *******************")
     print(desc)
@@ -122,7 +123,14 @@ def RaiseAssert(scode, desc):
 class AXScriptCodeBlock:
     """An object which represents a chunk of code in an AX Script"""
 
-    def __init__(self, name, codeText, sourceContextCookie, startLineNumber, flags):
+    def __init__(
+        self,
+        name: str,
+        codeText: str,
+        sourceContextCookie: int,
+        startLineNumber: int,
+        flags,
+    ):
         self.name = name
         self.codeText = codeText
         self.codeObject = None
@@ -139,7 +147,7 @@ class AXScriptCodeBlock:
     def GetDisplayName(self):
         return self.name
 
-    def GetLineNo(self, no):
+    def GetLineNo(self, no: int):
         pos = -1
         for i in range(no - 1):
             pos = self.codeText.find("\n", pos + 1)
@@ -628,7 +636,7 @@ class COMScript:
         self.safetyOptions = 0
         self.lcid = 0
         self.subItems = {}
-        self.scriptCodeBlocks = {}
+        self.scriptCodeBlocks: dict[str, AXScriptCodeBlock] = {}
 
     def _query_interface_(self, iid):
         if self.debugManager:
@@ -1086,7 +1094,7 @@ class COMScript:
         else:
             return fn(*args)
 
-    def ApplyInScriptedSection(self, codeBlock, fn, args):
+    def ApplyInScriptedSection(self, codeBlock: AXScriptCodeBlock | None, fn, args):
         self.BeginScriptedSection()
         try:
             try:
@@ -1105,7 +1113,9 @@ class COMScript:
             self.debugManager.OnEnterScript()
         return compile(code, name, type)
 
-    def CompileInScriptedSection(self, codeBlock, type, realCode=None):
+    def CompileInScriptedSection(
+        self, codeBlock: AXScriptCodeBlock, type, realCode=None
+    ):
         if codeBlock.codeObject is not None:  # already compiled
             return 1
         if realCode is None:
@@ -1137,7 +1147,7 @@ class COMScript:
         else:
             exec(codeObject, globals, locals)
 
-    def ExecInScriptedSection(self, codeBlock, globals, locals=None):
+    def ExecInScriptedSection(self, codeBlock: AXScriptCodeBlock, globals, locals=None):
         if locals is None:
             locals = globals
         assert (
@@ -1185,31 +1195,26 @@ class COMScript:
         except:
             self.HandleException(codeBlock)
 
-    def HandleException(self, codeBlock):
-        # NOTE - Never returns - raises a ComException
-        exc_type, exc_value, exc_traceback = sys.exc_info()
+    def HandleException(self, codeBlock: AXScriptCodeBlock | None) -> NoReturn:
+        """Never returns - raises a ComException"""
+        exc_type, exc_value, *_ = sys.exc_info()
         # If a SERVER exception, re-raise it.  If a client side COM error, it is
         # likely to have originated from the script code itself, and therefore
         # needs to be reported like any other exception.
         if IsCOMServerException(exc_type):
             # Ensure the traceback doesnt cause a cycle.
-            exc_traceback = None
             raise
         # It could be an error by another script.
         if (
-            issubclass(pythoncom.com_error, exc_type)
+            isinstance(exc_value, pythoncom.com_error)
             and exc_value.hresult == axscript.SCRIPT_E_REPORTED
         ):
             # Ensure the traceback doesnt cause a cycle.
-            exc_traceback = None
             raise COMException(scode=exc_value.hresult)
 
-        exception = error.AXScriptException(
-            self, codeBlock, exc_type, exc_value, exc_traceback
-        )
+        exception = error.AXScriptException(self, codeBlock, exc_value=exc_value)
 
         # Ensure the traceback doesnt cause a cycle.
-        exc_traceback = None
         result_exception = error.ProcessAXScriptException(
             self.scriptSite, self.debugManager, exception
         )
